--- a/RM.Localization.csproj
+++ b/RM.Localization.csproj
@@ -25,7 +25,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>bin\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -92,31 +92,31 @@
     <Compile Include="ViewModels\LocalizedTagsIndexViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Orchard.Source.1.7.2\src\Orchard\Orchard.Framework.csproj">
+    <ProjectReference Include="..\..\..\Orchard\Orchard.Framework.csproj">
       <Project>{2D1D92BB-4555-4CBE-8D0E-63563D6CE4C6}</Project>
       <Name>Orchard.Framework</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Orchard.Source.1.7.2\src\Orchard.Web\Core\Orchard.Core.csproj">
+    <ProjectReference Include="..\..\Core\Orchard.Core.csproj">
       <Project>{9916839C-39FC-4CEB-A5AF-89CA7E87119F}</Project>
       <Name>Orchard.Core</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Orchard.Source.1.7.2\src\Orchard.Web\Modules\Orchard.Alias\Orchard.Alias.csproj">
+    <ProjectReference Include="..\Orchard.Alias\Orchard.Alias.csproj">
       <Project>{475B6C45-B27C-438B-8966-908B9D6D1077}</Project>
       <Name>Orchard.Alias</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Orchard.Source.1.7.2\src\Orchard.Web\Modules\Orchard.Autoroute\Orchard.Autoroute.csproj">
+    <ProjectReference Include="..\Orchard.Autoroute\Orchard.Autoroute.csproj">
       <Project>{66fccd76-2761-47e3-8d11-b45d0001ddaa}</Project>
       <Name>Orchard.Autoroute</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Orchard.Source.1.7.2\src\Orchard.Web\Modules\Orchard.Localization\Orchard.Localization.csproj">
+    <ProjectReference Include="..\Orchard.Localization\Orchard.Localization.csproj">
       <Project>{FBC8B571-ED50-49D8-8D9D-64AB7454A0D6}</Project>
       <Name>Orchard.Localization</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Orchard.Source.1.7.2\src\Orchard.Web\Modules\Orchard.Tags\Orchard.Tags.csproj">
+    <ProjectReference Include="..\Orchard.Tags\Orchard.Tags.csproj">
       <Project>{5d0f00f0-26c9-4785-ad61-b85710c60eb0}</Project>
       <Name>Orchard.Tags</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Orchard.Source.1.7.2\src\Orchard.Web\Modules\Orchard.Tokens\Orchard.Tokens.csproj">
+    <ProjectReference Include="..\Orchard.Tokens\Orchard.Tokens.csproj">
       <Project>{6f759635-13d7-4e94-bcc9-80445d63f117}</Project>
       <Name>Orchard.Tokens</Name>
     </ProjectReference>
@@ -132,16 +132,16 @@
     <Content Include="Placement.info" />
     <Content Include="Views\EditorTemplates\Parts.RMLocalization.ContentTranslations.Edit.cshtml" />
     <Content Include="Views\EditorTemplates\Parts.Autoroute.Edit.cshtml" />
-    <None Include="Views\EditorTemplates\Parts.CookieCulturePicker.Edit.cshtml" />
-    <None Include="Views\EditorTemplates\Parts.ShadowCulture.Settings.cshtml" />
+    <Content Include="Views\EditorTemplates\Parts.CookieCulturePicker.Edit.cshtml" />
+    <Content Include="Views\EditorTemplates\Parts.ShadowCulture.Settings.cshtml" />
     <Content Include="Views\NotTranslated.cshtml" />
-    <None Include="Views\Parts\InlineListCookieCulturePicker.cshtml" />
+    <Content Include="Views\Parts\InlineListCookieCulturePicker.cshtml" />
     <Content Include="Views\Web.config" />
     <Content Include="Views\LocalizedTags\Index.cshtml" />
     <Content Include="Views\LocalizedTags\Search.cshtml" />
     <Content Include="Views\Parts\LocalizedTagCloud.cshtml" />
     <Content Include="Views\Parts\RMLocalization.ContentTranslations.SummaryAdmin.cshtml" />
-    <None Include="Views\Parts\DropdownCookieCulturePicker.cshtml" />
+    <Content Include="Views\Parts\DropdownCookieCulturePicker.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
